Blame: Fix vertical alignment of paste button icon

--- a/github-dark.css
+++ b/github-dark.css
@@ -1244,7 +1244,6 @@
   }
   .octicon, svg.octicon {
     fill: currentColor !important;
-    vertical-align: middle !important;
   }
   .reorderable-task-lists .markdown-body .task-list-item .drag-handle {
     fill: #c0c0c0 !important;
